--- a/InstagramApp/Storyboards/Base.lproj/Main.storyboard
+++ b/InstagramApp/Storyboards/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" systemColor="labelColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="Vik-Vb-qX7" kind="relationship" relationship="viewControllers" id="tYL-CQ-AJo"/>
@@ -67,7 +67,7 @@
         <scene sceneID="SBd-if-d1e">
             <objects>
                 <navigationController id="DsU-ho-PRY" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="globe" catalog="system" id="HA0-yJ-62g"/>
+                    <tabBarItem key="tabBarItem" title="" image="magnifyingglass" catalog="system" id="HA0-yJ-62g"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qfU-57-NOK">
                         <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -101,7 +101,7 @@
         <scene sceneID="UE5-IF-Dcu">
             <objects>
                 <navigationController id="v2W-qn-k2T" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="bell" catalog="system" id="9Fe-bJ-lf3"/>
+                    <tabBarItem key="tabBarItem" title="" image="heart" catalog="system" id="9Fe-bJ-lf3"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4e1-cL-Iq6">
                         <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -197,11 +197,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bell" catalog="system" width="125" height="128"/>
-        <image name="globe" catalog="system" width="128" height="123"/>
+        <image name="heart" catalog="system" width="128" height="107"/>
         <image name="house" catalog="system" width="128" height="104"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="person" catalog="system" width="128" height="121"/>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
